Update content Model 2

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -24,11 +24,11 @@ As an example, we will update the Product content model we created in the [Creat
    ✔️ The Content Models screen opens.
 
 2. Hover on the **Product** content model.
-3. Click **EDIT CONTENT MODEL** icon ✏️.
+3. Click the **EDIT CONTENT MODEL** icon ✏️.
    
    ✔️ The Product Content Model screen opens.
 
-4. Click on the Settings icon ⚙️.
+4. Click the Settings icon ⚙️.
 
    ✔️ The Content Model Settings screen opens.
 
