Update Content Model 3

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -28,7 +28,7 @@ As an example, we will update the Product content model we created in the [Creat
    
    ✔️ The Product Content Model screen opens.
 
-4. Click the Settings icon ⚙️.
+4. Click the **Settings** icon ⚙️.
 
    ✔️ The Content Model Settings screen opens.
 
