Add Validators to Fields 2

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
@@ -9,6 +9,7 @@ import { Alert } from "@/components/Alert";
 
 - what is a validator
 - how to add a validator to a content model's field
+- how to test the applied validator
 
 </Alert>
 
@@ -16,7 +17,7 @@ A validator helps you make sure that the information provided by a user is corre
 It ensures that the information user enters matches the expected format.
 
 In this tutorial, we will learn how to add validators to a content model's fields.
-As an example, we will add validators to the LONG TEXT and NUMBER fields used in the Product [content model](../essentials/glossary#content-model) we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** [content model](../essentials/glossary#content-model) we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
 
 ## Add validator to a LONG TEXT field
@@ -27,14 +28,92 @@ As an example, we will add validators to the LONG TEXT and NUMBER fields used in
     
 2. Hover on the **Product** content model.
 
-3. Click the EDIT CONTENT MODEL icon ✏️.
+3. Click the **EDIT CONTENT MODEL** icon ✏️.
 
     ✔️ The Product Content Model screen opens.
 
-4. In the **Edit** tab, click the EDIT FIELD icon ✏️ on the **Description** field.
+4. Inside the **Edit** tab, on the **Description** field, click the **EDIT FIELD** icon ✏️.
 
     ✔️ Field Settings - Long Text screen opens.
 
 5. Click the **VALIDATORS** tab.
 
-6. 
+6. To make the input for the **Description** field mandatory, on the **Required** validator, click the **Enabled** button.
+
+    ✔️ Message field opens.
+
+7. In the **Message** field, type **You cannot leave this field empty**.
+
+8. To set the minimum length of the input for the **Description** field, on the **Min length** validator, click the **Enabled** button.
+
+    ✔️ Message and Value fields open.
+
+9. In the **Value** field, type **20**.
+
+10. In the **Message** field, type **Description cannot be less than 20 words**.
+
+11. Click **SAVE FIELD**.
+
+
+## Add validator to a NUMBER field
+ **Note**: If you don't already have the Product Content Model screen open, follow the Steps 1 to 3 in the previous section.
+
+1. Inside the **Edit** tab, on the **Price** field, click the **EDIT FIELD** icon ✏️.
+
+    ✔️ Field Settings - Number screen opens.
+
+2. Click the **VALIDATORS** tab.
+
+3. To make the input for the **Price** field mandatory, on the **Required** validator, click the **Enabled** button.
+
+    ✔️ Message field opens.
+
+4. In the **Message** field, type **You cannot leave this field empty**.
+
+5. To set the minimum value for the **Price** field, on the **Greater or equal** validator, click the **Enabled** button.
+
+    ✔️ Message and Value fields open.
+
+6. In the **Value** field, type **5**.
+
+7. In the **Message** field, type **Price cannot be less than $5**.
+
+8. Click **SAVE FIELD**.
+    
+
+## Test the validators
+
+**Note**: If you don't already have the Product Content Model screen open, follow the Steps 1 to 3 in the first section.
+
+### Test the validators for the LONG TEXT field.
+
+1. Click the **PREVIEW** tab.
+
+2. Click the **Description** field.
+
+3. Click anywhere outside the **Description** field.
+
+    ✔️ The message "You cannot leave this field empty" appears.
+
+4. In the **Description** field, type **Top sweatshirt fabric made from a cotton blend**.
+
+5. Click anywhere outside the **Description** field.
+
+    ✔️ The message "Description cannot be less than 20 words" appears.
+
+
+### Test the validators for the NUMBER field.
+
+1. Click the **PREVIEW** tab.
+
+2. Click the **Price** field.
+
+3. Click anywhere outside the **Price** field.
+
+    ✔️ The message "You cannot leave this field empty" appears.
+
+4. In the **Price** field, type **4**.
+
+5. Click anywhere outside the **Price** field.
+
+    ✔️ The message "Price cannot be less than $5" appears.
