--- a/src/docs/shared/release-notes/5.34.5/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.5/changelog.mdx
@@ -8,4 +8,4 @@ description: See what's new in Webiny version 5.34.5.
 
 ### Form Page Element - Addressed A Form Submission Issue ([#3034](https://github.com/webiny/webiny-js/pull/3034))
 
-We've addressed a issue related to the Form page element. Essentially, the issue was preventing users from submitting the form on a public website.
+We've addressed an issue related to the Form page element. Essentially, the issue was preventing users from submitting the form on a public website.
