Add Validators to Fields 3

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
@@ -30,11 +30,11 @@ As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields
 
 3. Click the **EDIT CONTENT MODEL** icon ✏️.
 
-    ✔️ The Product Content Model screen opens.
+    ✔️ Screen to configure the **Product** content model's fields opens.
 
 4. Inside the **Edit** tab, on the **Description** field, click the **EDIT FIELD** icon ✏️.
 
-    ✔️ Field Settings - Long Text screen opens.
+    ✔️ **Field Settings - Long Text** screen opens.
 
 5. Click the **VALIDATORS** tab.
 
@@ -60,7 +60,7 @@ As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields
 
 1. Inside the **Edit** tab, on the **Price** field, click the **EDIT FIELD** icon ✏️.
 
-    ✔️ Field Settings - Number screen opens.
+    ✔️ **Field Settings - Number** screen opens.
 
 2. Click the **VALIDATORS** tab.
 
