Update contentt model 4

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -26,11 +26,11 @@ As an example, we will update the Product content model we created in the [Creat
 2. Hover on the **Product** content model.
 3. Click the **EDIT CONTENT MODEL** icon ✏️.
    
-   ✔️ The Product Content Model screen opens.
+   ✔️ Screen to configure the **Product** content model's fields opens.
 
 4. Click the **Settings** icon ⚙️.
 
-   ✔️ The Content Model Settings screen opens.
+   ✔️ The **Content Model Settings** screen opens.
 
 5. To update the model's description, in the **General settings section**, click the **Content model description** textbox. 
 6. Update its value to - "Demo Product Content Model for E-Commerce project".
@@ -41,3 +41,7 @@ As an example, we will update the Product content model we created in the [Creat
 8. If you have already created another group, select that group.
 
 9. Click **SAVE SETTINGS**.
+
+   ✔️ Screen to configure the **Product** content model's fields opens.
+
+10. Clicj **SAVE**.
