docs: done various improvements to update content model user guide

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -5,7 +5,6 @@ description: Learn how to update a content model in Headless CMS.
 
 import { Alert } from "@/components/Alert";
 import createContent from "./assets/create-content-model/create-content-model.mp4";
-import editContentModelIcon from "./assets/update-content-model/iconmonstr-pencil-filled.svg";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -16,32 +15,28 @@ import editContentModelIcon from "./assets/update-content-model/iconmonstr-penci
 In this tutorial, we will learn how to update a [content model](../essentials/glossary#content-model). 
 As an example, we will update the Product content model we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
-
-
 ## Update Content Model
 1. From the **Side Menu**, Click **Headless CMS** > **Models**. 
 
    ✔️ The Content Models screen opens.
 
 2. Hover on the **Product** content model.
-3. Click the **EDIT CONTENT MODEL** icon ✏️.
+3. Click the **EDIT CONTENT MODEL** icon (✏️).
    
    ✔️ Screen to configure the **Product** content model's fields opens.
 
-4. Click the **Settings** icon ⚙️.
+4. Click the **Settings** icon (⚙️).
 
-   ✔️ The **Content Model Settings** screen opens.
+   ✔️ The **Content model settings** screen opens.
 
-5. To update the model's description, in the **General settings section**, click the **Content model description** textbox. 
-6. Update its value to - "Demo Product Content Model for E-Commerce project".
+5. In the **Content model description** textbox, update **Demo Product Content Model** text to **Demo Product Content Model for E-Commerce project**.
 
-   **Note**: Similarly you can update the name of the model.
-
-7. To update the model's group, in the **General settings section**, click the **Content model group** dropdown.
-8. If you have already created another group, select that group.
+   **Note**: Similarly, you can update the **Content model name**, **Content model group**, and **Tags**.
 
 9. Click **SAVE SETTINGS**.
 
-   ✔️ Screen to configure the **Product** content model's fields opens.
+   ✔️ Screen to configure the **Product** content model's fields opens with a message "Content model settings updated successfully."
 
-10. Clicj **SAVE**.
+10. Click **SAVE**.
+
+    ✔️ "Your content model was successfully saved!" will be displayed. 
