docs: made the various improvements to add validator to fields user guide

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
@@ -7,20 +7,19 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- what is a validator
+- what is a field validator
 - how to add a validator to a content model's field
 - how to test the applied validator
 
 </Alert>
 
-A validator helps you make sure that the information provided by a user is correct and meets specific requirements. 
-It ensures that the information user enters matches the expected format.
+A field validator helps you ensure the user input meets specific requirements and matches the expected format for a field.
 
 In this tutorial, we will learn how to add validators to a content model's fields.
-As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** [content model](../essentials/glossary#content-model) we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
 
-## Add validator to a LONG TEXT field
+## Step 1: Add `Required` and `Min length` validators to a LONG TEXT field
 
 1. From the **Side Menu**, Click **Headless CMS** > **Models**.
 
@@ -32,88 +31,48 @@ As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields
 
     ✔️ Screen to configure the **Product** content model's fields opens.
 
-4. Inside the **Edit** tab, on the **Description** field, click the **EDIT FIELD** icon ✏️.
+4. Click the **EDIT FIELD** icon (✏️) on the **Description** field.
 
     ✔️ **Field Settings - Long Text** screen opens.
 
 5. Click the **VALIDATORS** tab.
 
-6. To make the input for the **Description** field mandatory, on the **Required** validator, click the **Enabled** button.
+6. Enable the **Required** validation by toggling the **Enabled** button. This will make the **Description** field mandatory.
 
-    ✔️ Message field opens.
+    ✔️  Message textbox will be shown to set the error message.
 
-7. In the **Message** field, type **You cannot leave this field empty**.
+7. In the **Message** textbox, type **Please enter the product description**.
 
-8. To set the minimum length of the input for the **Description** field, on the **Min length** validator, click the **Enabled** button.
+8. Enable the **Min length** validation by toggling the **Enabled** button. 
 
-    ✔️ Message and Value fields open.
+    ✔️ Message and Value textboxes will be shown to set the error message and minimum value.
 
-9. In the **Value** field, type **20**.
+9. In the **Message** textbox, type **Description cannot be less than 20 characters**.
 
-10. In the **Message** field, type **Description cannot be less than 20 words**.
+10. In the **Value** textbox, type **20**. 
 
 11. Click **SAVE FIELD**.
 
+   ✔️ Screen to configure the **Product** content model's fields opens.
 
-## Add validator to a NUMBER field
- **Note**: If you don't already have the Product Content Model screen open, follow the Steps 1 to 3 in the previous section.
+12. Click **SAVE**.
 
-1. Inside the **Edit** tab, on the **Price** field, click the **EDIT FIELD** icon ✏️.
-
-    ✔️ **Field Settings - Number** screen opens.
-
-2. Click the **VALIDATORS** tab.
-
-3. To make the input for the **Price** field mandatory, on the **Required** validator, click the **Enabled** button.
-
-    ✔️ Message field opens.
-
-4. In the **Message** field, type **You cannot leave this field empty**.
-
-5. To set the minimum value for the **Price** field, on the **Greater or equal** validator, click the **Enabled** button.
-
-    ✔️ Message and Value fields open.
-
-6. In the **Value** field, type **5**.
-
-7. In the **Message** field, type **Price cannot be less than $5**.
-
-8. Click **SAVE FIELD**.
-    
-
-## Test the validators
-
-**Note**: If you don't already have the Product Content Model screen open, follow the Steps 1 to 3 in the first section.
-
-### Test the validators for the LONG TEXT field.
-
-1. Click the **PREVIEW** tab.
-
-2. Click the **Description** field.
-
-3. Click anywhere outside the **Description** field.
-
-    ✔️ The message "You cannot leave this field empty" appears.
-
-4. In the **Description** field, type **Top sweatshirt fabric made from a cotton blend**.
-
-5. Click anywhere outside the **Description** field.
-
-    ✔️ The message "Description cannot be less than 20 words" appears.
+    ✔️ "Your content model was successfully saved!" will be displayed.
 
 
-### Test the validators for the NUMBER field.
+## Step 2: Test the validators
 
-1. Click the **PREVIEW** tab.
+1. Click the **PREVIEW** tab in the Product Model screen.
 
-2. Click the **Price** field.
+2. Click the **Description** textbox.
 
-3. Click anywhere outside the **Price** field.
+3. Now click anywhere outside the **Description** textbox.
 
-    ✔️ The message "You cannot leave this field empty" appears.
+    ✔️ The message "Please enter the product description" appears.
 
-4. In the **Price** field, type **4**.
+4. In the **Description** textbox, type **Top sweatshirt**.
 
-5. Click anywhere outside the **Price** field.
+5. Now click anywhere outside the **Description** textbox.
 
-    ✔️ The message "Price cannot be less than $5" appears.
+    ✔️ The message "Description cannot be less than 20 characters" appears.
+
