Removed redundant import

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -4,8 +4,6 @@ description: Learn how to update a content model in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
-import createContent from "./assets/create-content-model/create-content-model.mp4";
-import editContentModelIcon from "./assets/update-content-model/iconmonstr-pencil-filled.svg";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -44,4 +42,4 @@ As an example, we will update the Product content model we created in the [Creat
 
    ✔️ Screen to configure the **Product** content model's fields opens.
 
-10. Clicj **SAVE**.
+10. Click **SAVE**.
