Added 'The message' before the message in last step. Removed hyperlink from 'content model'

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -12,8 +12,8 @@ import createContent from "./assets/create-content-model/create-content-model.mp
 
 </Alert>
 
-In this tutorial, we will learn how to update a [content model](../essentials/glossary#content-model). 
-As an example, we will update the Product content model we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+In this tutorial, we will learn how to update a content model. 
+As an example, we will update the **Product** content model we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
 ## Update Content Model
 1. From the **Side Menu**, Click **Headless CMS** > **Models**. 
@@ -39,4 +39,4 @@ As an example, we will update the Product content model we created in the [Creat
 
 10. Click **SAVE**.
 
-    ✔️ "Your content model was successfully saved!" will be displayed. 
+    ✔️ The message "Your content model was successfully saved!" will be displayed. 
