docs: done various improvements to reference field user guide

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/use-reference-field.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/use-reference-field.mdx
@@ -12,19 +12,23 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-A reference field is a tool that helps you link two different types of content. For example, you might have a **Product** content type and a **Category** content type, and want to link each product to the category it falls in. The reference field lets you select the category and save that information with the product. This makes it easier to organize and connect your content.
+The reference field enables users to link one content model to another. For instance, if you have two content models, **Product** and **Category**.
+A product may belong to multiple categories. In such a scenario, we create a reference field in the **Product** content model that refers to the **Category** model.
 
 In this tutorial, we will learn how to use reference field.
-As an example, we will use the **Product** [content model](../essentials/glossary#content-model) we created in the [Create Content Model](../essentials/create-content-model) tutorial, create another content model **Category**, and give the reference of **Category** in **Product**. 
-We will do this in four steps:
+As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+We will create another content model **Category**, and give the reference of **Category** in **Product**. 
+We will do this in three steps:
 
-- In Step 1, we will create content model **Category** and add content entries.
-- In Step 2, we will update the content model **Product** and add a reference field to it.
-- In Step 3, we will create content entry in the content model **Product** with reference of content model **Category**.
+- Step 1: Create a **Category** content model and add content entries to it.
+- Step 2: Update the **Product** content model and add a category reference field to it.
+- Step 3: Create a content entry in the **Product** content model with reference to the **Category** content model.
 
-## Step 1: Create content model - Category
+## Step 1: Create 'Category' content model
 
-**Note**: If you don't know how to create a content model, follow the [Create Content Model](../essentials/create-content-model) tutorial.
+We will create a category content model with the following attributes and fields.
+
+If you are not familier with how to create a content model, please follow the [Create Content Model](../essentials/create-content-model) tutorial.
 
 1. Create a content model with the following attributes:
 
@@ -34,7 +38,7 @@ We will do this in four steps:
     | Group       | If you have created a group, select that group, else select **Ungrouped**  |
     | Description | **Demo Category content model**                                            |
 
-2. Add the following field to the content model:
+2. Add the following field to the **Category** content model:
 
     | Field       | Field Type |
     | :-------    | :----------|
@@ -42,7 +46,7 @@ We will do this in four steps:
 
 
 
-## Step 2: Create content entries - Category
+## Step 2: Create 'Category' content entries
 
 
 1. From the **Side Menu**, Click **Headless CMS** > **Categories**.
@@ -55,17 +59,17 @@ We will do this in four steps:
 
 4. Click **SAVE & PUBLISH**.
 
-**Optional**: Similarly create another content entry with name **Accessories**.
+**Optional**: Similarly, you can create another category content entry with name **Accessories**.
 
 
-## Step 3: Update Content Model - Product
+## Step 3: Update 'Product' Content Model
 
 1. From the **Side Menu**, Click **Headless CMS** > **Models**. 
 
    ✔️ The Content Models screen opens.
 
 2. Hover on the **Product** content model.
-3. Click the **EDIT CONTENT MODEL** icon ✏️.
+3. Click the **EDIT CONTENT MODEL** icon (✏️).
    
    ✔️ Screen to configure the content model's fields opens.
 
@@ -79,7 +83,7 @@ We will do this in four steps:
 
 7. Click the **Use as a list of references** button.
 
-    **Note**: A product can fall under more than one category. Enabling **Use as a list of references** will allow us to add multiple categories to a product.
+    **Note**: Since a product can belong to multiple categories. Enabling **Use as a list of references** will allow us to associate multiple categories to a product.
 
 8. Click **SAVE FIELD**.
 
@@ -88,7 +92,7 @@ We will do this in four steps:
 9. Click **SAVE**.
 
 
-## Step 4: Create content entry with reference - Product
+## Step 4: Create 'Product' content entry with a reference to 'Category'
 
 
 1. From the **Side Menu**, Click **Headless CMS** > **Products**.
