docs: added the video to update content model

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/update-content-model.mdx
@@ -4,7 +4,7 @@ description: Learn how to update a content model in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
-import createContent from "./assets/create-content-model/create-content-model.mp4";
+import updateContent from "./assets/update-content-model/update-content-model.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -14,6 +14,8 @@ import createContent from "./assets/create-content-model/create-content-model.mp
 
 In this tutorial, we will learn how to update a content model. 
 As an example, we will update the **Product** content model we created in the [Create Content Model](../essentials/create-content-model) tutorial.
+
+<Video src={updateContent} controls={true}/>
 
 ## Update Content Model
 1. From the **Side Menu**, Click **Headless CMS** > **Models**. 
