fix: apply minor style adjustments

--- a/src/docs/shared/release-notes/5.34.5/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.5/changelog.mdx
@@ -6,10 +6,12 @@ description: See what's new in Webiny version 5.34.5.
 
 ## Page Builder
 
-### Form Page Element - Addressed A Form Submission Issue ([#3034](https://github.com/webiny/webiny-js/pull/3034))
+### Form Page Element - Resolved A Form Submission Issue ([#3034](https://github.com/webiny/webiny-js/pull/3034))
 
 We've addressed an issue related to the Form page element. Essentially, the issue was preventing users from submitting the form on a public website.
 
-## Babel Plugin Lodash ([#3045](https://github.com/webiny/webiny-js/pull/3045))
+## Development
+
+### Babel Plugin Lodash ([#3045](https://github.com/webiny/webiny-js/pull/3045))
 
 We've added a piece of code in our [createBabelConfigForNode.js](https://github.com/webiny/webiny-js/blob/20c3b650e48b756e98ed74f75a9e41919e8afed2/packages/project-utils/packages/createBabelConfigForNode.js) due to a change in the @babel/types causing babel-plugin-lodash to break on build time.
