Added pre-information after the Step 1 Heading

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
@@ -21,13 +21,17 @@ As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields
 
 ## Step 1: Add `Required` and `Min length` validators to a LONG TEXT field
 
+In this step we will:
+- make the **Description** field required.
+- set the minimum length for the input the **Description** field to **20 characters**.
+
 1. From the **Side Menu**, Click **Headless CMS** > **Models**.
 
     ✔️ The Content Models screen opens.
     
 2. Hover on the **Product** content model.
 
-3. Click the **EDIT CONTENT MODEL** icon ✏️.
+3. Click the **EDIT CONTENT MODEL** icon (✏️).
 
     ✔️ Screen to configure the **Product** content model's fields opens.
 
@@ -75,4 +79,3 @@ As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields
 5. Now click anywhere outside the **Description** textbox.
 
     ✔️ The message "Description cannot be less than 20 characters" appears.
-
