docs: added video for create content entry and content model group

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-entry.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-entry.mdx
@@ -4,6 +4,7 @@ description: Learn how to create a content entry in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
+import createContentEntry from "./assets/create-content-entry/create-content-entry.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -24,6 +25,8 @@ As an example, we will create a **Product** content entry with the following att
 ## Prerequisites
 To create a content entry, the prerequisite is to have a content model.
 If you don't have any content model yet, please follow this [tutorial](../essentials/create-content-model) to create a content model.
+
+<Video src={createContentEntry} controls={true}/>
 
 ## Create Content Entry
 
