--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-model-group.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-model-group.mdx
@@ -4,6 +4,7 @@ description: Learn how to create a content model group in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
+import createContentModelGroup from "./assets/create-content-model-group/create-content-model-group.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -28,6 +29,7 @@ As an example, we will create a E-Commerce content group with the following valu
 | Group icon  | 🛒                     |
 | Description | E-Commerce Model Group |
 
+<Video src={createContentModelGroup} controls={true}/>
 
 ## Create Content Model Group
 
